avoid mn-select flickers

--- a/webcomponents/select/select.style.scss
+++ b/webcomponents/select/select.style.scss
@@ -64,6 +64,10 @@
   }
 }
 
+mn-select option {
+  display: none;
+}
+
 .mn-select.visible {
   z-index: 10;
   menu {
